[project]
name = "WenselAgents"
version = "0.1.0"
description = "Agentic workflows for various tasks using CrewAI and Ollama."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]",       # Get the latest
    "crewai-tools",        # Get the latest
    "ollama",              # Get the latest
    "pydantic",            # Get the latest
    "python-dotenv",       # Get the latest
    "langchain-community", # Get the latest
    "litellm",             # Get the latest
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "ipykernel",
]

[tool.uv]
managed = true
package = false

[tool.ruff]
target-version = "py312"
line-length = 100 

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (logic/syntax errors)
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (common design flaws)
    "C4",   # flake8-comprehensions (optimized collection usage)
    "UP",   # pyupgrade (modernize syntax)
    "ASYNC",# flake8-async (crucial for agentic/async code)
    "S",    # flake8-bandit (security checks for API keys/shell execution)
    "RUF",  # Ruff-specific rules (highly optimized checks)
]
ignore = [
    "D",    # We skip Docstring requirements (too anal for most)
    "ANN",  # We skip mandatory Type Annotations (keeps prototyping fast)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
